# genro-tytx

./: .gitignore  CLAUDE.md  NOTICE  README.md  package.json  pyproject.toml
.github/workflows/: docs.yml  publish.yml  tests.yml
annuncement/: 0.5.0.md
benchmarks/: benchmark.js  benchmark.py
binder/: requirements.txt
docs/: ARCHITECTURE_DECISIONS.md  alternatives.md  conf.py  faq.md  genro-tytx-for-dummies.html  http-integration.md  index.md  installation.md  middleware-api.md  openapi_integration.md  quickstart.md  ui_generation.md
docs/_static/: custom.css
docs/api/: reference.md
docs/examples/: api-response.md  config-file.md  data-export.md  index.md
docs/guide/: cross-language-testing.md  custom-types.md  formatting.md  http_helpers.md  index.md  javascript.md  json.md  msgpack.md  pydantic.md  registry.md  types.md  xml.md
examples/: README.md
examples/schemas/: fatturapa.json
examples/visualizer/: index.html
full-test-suite/: README.md  server_asgi.py  test_e2e_python.py
js/: README.md  build.js  jsdoc.json  package-lock.json  package.json  tsconfig.json
js/docs/: global.html  index.html  index.js.html  json_utils.js.html  module-genro-tytx.html  module-json_utils.html  module-msgpack_utils.html  module-registry.html  module-types.html  module-tytx_model-TytxModel.html  module-tytx_model.html  module-xml_utils.html  msgpack_utils.js.html  registry.js.html  types.js.html  tytx_model.js.html  xml.js.html  xml_utils.js.html
js/src/: decode.js  encode.js  fetch.js  http.js  index.js  index.ts  json_utils.js  metadata.js  msgpack.js  msgpack_utils.js  registry.js  schema_utils.js  types.js  tytx_model.js  ui.js  validation.js  xml.js  xml_utils.js  xtytx.js
js/src/validation-locale/: index.js  it.js
js/test/: server.js  server_echo.js  test_core.js  test_cross_http.js  test_cross_language.js  test_extended.js  test_fetch.js  test_http.js  test_metadata.js  test_schema_utils.js  test_validation.js  test_xml.js  test_xtytx.js
js/tests/: test.js
llm-docs/: API-DETAILS.md  PATTERNS.md  README.md
notebooks/: 01_basic_types.ipynb  02_json_serialization.ipynb  02_json_xml.ipynb  03_struct_types.ipynb  04_xml_support.ipynb  05_advanced_features.ipynb
scripts/: openapi_params_to_struct.py  xsd_to_tytx.py
spec/: TYTX-SPEC.md  roadmap.md  structs.md  type-codes.md  tytx-protocol.md  validation.md  xtytx.md
spec/formats/: json.md  msgpack.md  xml.md
src/genro_tytx/: __init__.py  base.py  builtin.py  compare.py  decode.py  encode.py  extension.py  http.py  http_async_utils.py  http_utils.py  json_utils.py  metadata_parser.py  middleware.py  msgpack.py  msgpack_utils.py  pydantic.py  pydantic_utils.py  registry.py  schema_utils.py  struct.py  utils.py  xml.py  xml_utils.py  xtytx.py
src/genro_tytx/encoders/: __init__.py
src/genro_tytx/middleware/: asgi.py  wsgi.py
src/genro_tytx/validation_locale/: __init__.py  it.py
src/genro_tytx_base/: __init__.py  decode.py  encode.py  http.py  msgpack.py  registry.py  xml.py
tests/: __init__.py  server_echo.py  test_compare.py  test_core.py  test_coverage_extra.py  test_cross_http.py  test_cross_language.py  test_cross_language_server.py  test_cross_middleware.py  test_cross_middleware_server.py  test_detection_helpers.py  test_extended.py  test_extension.py  test_http.py  test_http_async_utils.py  test_http_utils.py  test_json.py  test_json_codec.py  test_metadata_parser.py  test_middleware.py  test_middleware_asgi.py  test_middleware_wsgi.py  test_model_from_struct.py  test_msgpack.py  test_msgpack_utils.py  test_pydantic_extra.py  test_pydantic_struct.py  test_pydantic_utils_extra.py  test_registry_extra.py  test_schema_utils.py  test_structs.py  test_utils.py  test_validation.py  test_version.py  test_xml.py  test_xtytx.py
tests/fixtures/: cross_language.json
ts/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
ts/coverage/: clover.xml  coverage-final.json  fetch.ts.html  index.html  index.ts.html  json.ts.html  metadata.ts.html  model.ts.html  msgpack.ts.html  registry.ts.html  schema-utils.ts.html  types.ts.html  xtytx.ts.html
ts/src/: decode.ts  encode.ts  fetch.ts  index.ts  json.ts  metadata.ts  model.ts  msgpack.ts  registry.ts  schema-utils.ts  server.ts  types.ts  validation.ts  xtytx.ts
ts/src/validation-locale/: index.ts  it.ts
ts/test/: core.test.ts  cross_language.test.ts  fetch.test.ts  metadata.test.ts  schema-utils.test.ts  server.test.ts  test_core.ts  test_fetch.ts  test_xml.ts  validation.test.ts  xtytx.test.ts
