[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genro-tytx"
version = "0.7.0"
description = "TYTX Base - Typed text protocol for scalar types (JSON/XML/MessagePack)"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Genropy Team", email = "info@genropy.org" }
]
keywords = ["tytx", "typed", "json", "xml", "msgpack", "serialization", "genropy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
fast = ["orjson>=3.9"]
msgpack = ["msgpack>=1.0"]
all = ["orjson>=3.9", "msgpack>=1.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "orjson>=3.9",
    "msgpack>=1.0",
]

[project.urls]
Homepage = "https://github.com/genropy/genro-tytx"
Repository = "https://github.com/genropy/genro-tytx"
Documentation = "https://github.com/genropy/genro-tytx#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/genro_tytx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/genro_tytx"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
